# blob-store

./: .gitignore  CMakeLists.txt  Cargo.toml  bench.cpp  build.rs  example.cpp  main.cpp
benches/: bench_blob_store.rs
include/: blob_store.h  local_file_system.rs.h  memmap.rs.h  sqlite.rs.h
src/: error.rs  lib.rs  main.rs
src/ffi/: local_file_system.rs  memmap.rs  mod.rs  sqlite.rs
src/store_impl/: cache.rs  local_filesystem.rs  mapped_file.rs  mod.rs  sqlite.rs
src/store_impl/local_filesystem/: file_pool.rs  mod.rs
tests/: blob_store_impl.rs
tests/common/: blob_store_helper.rs  mod.rs
